<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake inventory data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all inventory data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Inventory</string>

    <!-- Title text for the empty view, which compares fuel level with store product inventory level [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no products in your store.</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_inventory">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_inventory">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_inventory_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_inventory_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Product Name</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_breed">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_weight">Quantity</string>

    <!-- Text hind to show if the quantity is 0. [CHAR LIMIT=20] -->
    <string name="sold_out">Sold Out</string>

    <string name="supplier_name_hint">Supplier Name</string>
    <string name="quantity_hint">0</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_inventory_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_ph_no">Supplier Phone Number</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!--Label for quantitiy-->
    <string name="quantity_label">Quantity</string>

    <!--Text to show on the sold button-->
    <string name="sold_button_text">Sold +1</string>

    <!--Label for product's price-->
    <string name="product_price_label">Price</string>

    <!--Label for supplier phone number-->
    <string name="supplier_phone_number_label">Supplier Phone Number</string>

    <!--Text to show when user keeps pressing minus even though quantity is zero.-->
    <string name="no_negative_quantity_toast">The quantity cannot be a negative number.</string>

    <!--Text to show in toast message when the user presses the save button without entering a product name-->
    <string name="required_name_toast">You must enter a name</string>

    <!--Text to show in toast message when the user presses the save button without entering a price-->
    <string name="price_toast_required">You must enter a price</string>

    <!--Text to show in toast message when the user presses the save button without entering a quantity-->
    <string name="quantity_toast_required">You must enter a quantity of 0 or higher.</string>

    <!--Text to show in toast message when the user presses the save button without entering a supplier name-->
    <string name="supplier_name_toast_required">You must enter a supplier name.</string>

    <!--Text to show in toast message when the user presses the save button without entering a supplier name-->
    <string name="supplier_phone_toast_required">You must enter a phone number.</string>

    <!--Text to show in set error when the user presses the save button without entering a product name-->
    <string name="name_set_error">Name required</string>

    <!--Text to show in set error when the user presses the save button without entering a price-->
    <string name="price_set_error">Price required</string>

    <!--Text to show in set error when the user presses the save button without entering a quantity-->
    <string name="quantity_set_error">Quantity required</string>

    <!--Text to show in set error when the user presses the save button without entering a supplier name-->
    <string name="supplier_name_set_error">Supplier Name required</string>

    <!--Text to show in set error when the user presses the save button without entering a supplier phone number-->
    <string name="phone_set_error">Phone number required</string>
</resources>