<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
        <!--https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup-->
        <!--by Muhammad Babar, thechaoticpanda, and Morgan Christiansson-->
        <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Product Name Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Product Name Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_name"
                android:hint="@string/hint_inventory_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Price Label -->
        <TextView
            android:text="@string/product_price_label"
            style="@style/CategoryStyle" />

        <!-- Price Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_inventory_price"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Quantity Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Quantity Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
<!--https://www.iconfinder.com/icons/214643/line_minus_icon-->
            <ImageButton
                android:id="@+id/subtract_image_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_subtract"/>
            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_quantity"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:hint="@string/quantity_hint"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/add_image_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_action_add"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Supplier Name Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Supplier Name Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/supplier_name_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Supplier Phone Label -->
        <TextView
            android:text="@string/supplier_phone_number_label"
            style="@style/CategoryStyle" />

        <!-- Supplier Phone Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Supplier phone number field -->
            <EditText
                android:id="@+id/edit_supplier_ph_no"
                android:hint="@string/hint_supplier_ph_no"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

            <ImageButton
                android:id="@+id/call_image_button"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_action_phone_start"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>